--- a/index.html
+++ b/index.html
@@ -8,7 +8,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main class="container">
+        <section class="search_section my-4">
+            <div class="input-group mb-3 w-50 m-auto">
+                <input type="text" class="form-control" id="search_box" placeholder="Search Drink...">
+                <button class="btn btn-secondary" id="search_btn">Search</button>
+            </div>
+        </section>
+        <section>
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="drinks_container">
+                  <div class="col">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
     <script src="app.js"></script>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
