--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
             </div>
         </section>
         <section>
-            <div class="row row-cols-1 row-cols-md-3 g-4" id="drinks_container">
-                  <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="row">
+                <div class="col-10 row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="drinks_container">
+                    
+                </div>
+                <div class="col mt-5">
+                    <div>
+                        <div class="text-center shadow-sm py-2">
+                            <h3>Total Cart: <span id="amount">0</span></h3>
+                            <div id="cart_head">
+                                <b>SL</b>
+                                <b>Img</b>
+                                <b>Name</b>
+                            </div>
                         </div>
+                        <ol id="cart_items">
+                            <li>hello</li>
+                            <li>hello</li>
+                        </ol>
                     </div>
                 </div>
             </div>
