implement add to cart and list of item store in cart

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
         </section>
         <section>
+            <div id="data_not_found"></div>
             <div class="row">
                 <div class="col-10 row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="drinks_container">
                     
@@ -26,17 +27,15 @@
                 <div class="col mt-5">
                     <div>
                         <div class="text-center shadow-sm py-2">
-                            <h3>Total Cart: <span id="amount">0</span></h3>
+                            <h3>Total Cart: <span id="cart_count">0</span></h3>
                             <div id="cart_head">
                                 <b>SL</b>
                                 <b>Img</b>
                                 <b>Name</b>
                             </div>
                         </div>
-                        <ol id="cart_items">
-                            <li>hello</li>
-                            <li>hello</li>
-                        </ol>
+                        <div id="cart_items">
+                        </div>
                     </div>
                 </div>
             </div>
